fixed an overflow issue due to the presence of commander icon

--- a/GW2EIParser/Resources/ei.css
+++ b/GW2EIParser/Resources/ei.css
@@ -319,7 +319,7 @@ img.icon-lg {
 
 table.composition td {
     max-width: 120px;
-    width: 120px;
+    min-width: 120px;
 }
 
 table.composition .shorten {
